api changes for close call

--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -163,7 +163,7 @@
             <p>{{'LIST' | translate}}</p>
           </a>
         </li>
-        <li *hasClaim="'MST_ADD_QUE','MST_UPDATE_QUE'" class="nav-item">
+        <li *hasClaim="'MST_ADD_QUE'" class="nav-item">
           <a [routerLink]="['/team/add']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
             class="nav-link">
             <i class="fas fa-plus-square nav-icon"></i>
