--- a/src/app/inventory/interaction-detail-view-dialog/interaction-detail-view-dialog.component.html
+++ b/src/app/inventory/interaction-detail-view-dialog/interaction-detail-view-dialog.component.html
@@ -1,32 +1,57 @@
 <mat-dialog-content>
-  
-  <div class="dialogdiv text-center my-3">
-    <span class="header-Text">Interaction ID:{{data?.transactionNumber}}</span></div>
 
-<!-- <div class="row">
-  <div class="col-md-12">
-    <div class="form-group">
-        <mat-label> Disposition</mat-label>
-        <mat-select [(ngModel)]="selectedValue"
-            placeholder="Select Disposition" class="form-control">
-            <ng-container *ngFor="let status of statusList" > 
-              <mat-option *ngIf="status?.isEnabled"  [value]="status.dispoCode">
+  <div class="dialogdiv text-center my-3">
+    <span class="header-Text">Interaction ID:{{data?.transactionNumber}}</span>
+  </div>
+  <div class="loading-shade" *ngIf="isLoading">
+    <mat-spinner *ngIf="isLoading"></mat-spinner>
+</div>
+  <form [formGroup]="disposeForm" *ngIf="data?.userData?.direction !='INBOUND'">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="form-group">
+          <mat-label> Disposition</mat-label>
+          <mat-select formControlName="dispositionId" (selectionChange)="onChange($event)" placeholder="Select Disposition" class="form-control">
+            <ng-container *ngFor="let status of statusList">
+              <mat-option *ngIf="status?.isEnabled" [value]="status.dispoCode">
                 {{status.dispoDesc}}
               </mat-option>
             </ng-container>
-        </mat-select>
-    </div>
-</div>
-</div> -->
+          </mat-select>
+          <div *ngIf="disposeForm.get('dispositionId').touched && disposeForm.get('dispositionId').errors">
+            <div class="text-danger" *ngIf="disposeForm.get('dispositionId').errors?.required">
+               Please select disposition
+            </div>
+        </div>
+        </div>
+        </div>
+        <div class="col-md-12" *ngIf="disposeForm.get('dispositionId')?.value == 'Call_Back'" >
+          <div class="form-group">
+            <mat-label>Call Back Time</mat-label>
+            <input class="form-control" [min]="currentDate" id="callDate" [readonly]="true" formControlName="date"
+                    [owlDateTimeTrigger]="callDate" [owlDateTime]="callDate" placeholder="{{'DATE' | translate}}">
+                <div *ngIf="disposeForm.get('date').touched && disposeForm.get('date').errors">
+                    <div class="text-danger" *ngIf="disposeForm.get('date').errors?.required">
+                        {{'DATE_IS_REQUIRED' | translate}}
+                    </div>
+                </div>
+                <owl-date-time  #callDate></owl-date-time>
+          </div>
+        </div>
+        </div>
+  </form>
 </mat-dialog-content>
-
-
 <mat-dialog-actions align="center">
   <div class="col-md-12 mt-1">
-    <!-- <button (click)="submit()" type="button" class="btn btn-success">
+    <button (click)="submit()" type="button" class="btn btn-success" *ngIf="data?.userData?.direction !='INBOUND'">
       <i class="fas fa-save"></i> Close Call
-    </button> -->
-    <button (click)="submit()" type="button" class="btn btn-success">
+    </button>
+    <button type="button" *ngIf="isError" class="btn btn-danger btn-md mx-3 px-3 py-2"  (click)="dialogRef.close(true)" ><i
+      class="fas fa-times-circle"></i>
+  {{"CANCEL" | translate}}
+</button>
+    <button (click)="dialogRef.close(true)" type="button" class="btn btn-success"
+      *ngIf="data?.userData?.direction =='INBOUND'">
       <i class="fas fa-save"></i> Done
     </button>
   </div>
